# jaffle-shop

./: .pre-commit-config.yaml  Dockerfile  main.py  profiles.yml  pyproject.toml
.github/workflows/: auto-tag.yml  build_docker.yml  docker.yml  tag.yml  test.yml
models/marts/: order_items.sql
workflows/: auto-tag.yml
